--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# conda create -p venv python==3.13
 langchain
 langgraph
 langchain_community
@@ -8,4 +9,3 @@ faiss-cpu
 streamlit
 tavily-python
 wikipedia
-openai
